# rr_cli

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  README.md
src/: cache.rs  cli.rs  client.rs  error.rs  main.rs  output.rs  types.rs
