[package]
name = "rr_cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Readwise Reader API"

[[bin]]
name = "rr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ctrlc = "3.4"
once_cell = "1.19"
